<?xml version="1.0" encoding="utf-8"?>
<ht.vpn.android.widget.TouchableScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/connectedCard"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            app:cardCornerRadius="@dimen/card_corner"
            app:cardUseCompatPadding="true"
            app:cardElevation="@dimen/card_elevation"
            app:contentPadding="@dimen/card_padding"
            app:contentPaddingBottom="12dp"
            app:contentPaddingTop="12dp"
            app:cardBackgroundColor="@color/green"
            android:visibility="gone">
            <com.devspark.robototextview.widget.RobotoTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/vpn_connected_header"
                android:textColor="@android:color/white"
                android:gravity="center"
                />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/mapsCard"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/card_corner"
            app:cardUseCompatPadding="true"
            app:cardElevation="@dimen/card_elevation"
            app:cardBackgroundColor="@android:color/white">
            <fragment
                android:id="@+id/mapFragment"
                class="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:uiMapToolbar="false" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/statusCard"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:cardCornerRadius="@dimen/card_corner"
            app:cardUseCompatPadding="true"
            app:cardElevation="@dimen/card_elevation"
            app:contentPadding="@dimen/card_padding"
            app:cardBackgroundColor="@android:color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:text="@string/ip_address" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@android:color/black"
                        android:text="@string/loading"
                        android:id="@+id/ipText" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_item_distance"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:text="@string/location" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@android:color/black"
                        android:text="@string/loading"
                        android:id="@+id/locationText" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/connectCard"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:cardCornerRadius="@dimen/card_corner"
            app:cardUseCompatPadding="true"
            app:cardElevation="@dimen/card_elevation"
            app:contentPadding="@dimen/card_padding"
            app:cardBackgroundColor="@android:color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Spinner
                    android:id="@+id/locationSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_marginTop="@dimen/card_item_distance"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_centerVertical="true"
                        android:textColor="@android:color/black"
                        android:text="@string/firewall" />
                    <CheckBox
                        android:id="@+id/firewallSwitch"
                        android:theme="@style/Theme.VPNht.Switch"
                        android:duplicateParentState="true"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:paddingRight="0dp"
                        android:paddingEnd="0dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:checked="false" />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <com.devspark.robototextview.widget.RobotoButton
            android:id="@+id/connectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="30dp"
            android:text="@string/connect"
            android:theme="@style/Theme.VPNht.StartButton" />

        <com.devspark.robototextview.widget.RobotoButton
            android:id="@+id/disconnectButton"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="30dp"
            android:text="@string/disconnect"
            android:theme="@style/Theme.VPNht.StopButton" />

    </LinearLayout>
</ht.vpn.android.widget.TouchableScrollView>